# kitchen-codex

./: LICENSE  README.md  build.sh  dune-project  kitchen_codex.opam  run.sh
lib/: .back-dune
lib/codex/: codex.ml  dune
lib/meal/: dune  meal.ml
lib/mealPlan/: dune  mealPlan.ml  template.eml.html
lib/static/: dune  main.css
lib/types/: dune  types.ml
test/: dune  test_codex.ml  test_kitchen_codex.ml
